--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,34 @@
 buildscript {
-    ext {
-        compose_version = '1.1.0-beta01'
-    }
+    ext.versions = [
+            'compileSdk'           : 31,
+            'minSdk'               : 21,
+            'targetSdk'            : 31,
+            'buildTools'           : '31.0.0',
+            // https://kotlinlang.org/docs/releases.html#release-details
+            'kotlin'               : '1.5.31',
+            'kotlinCoroutine'      : '1.5.2',
+            // https://developer.android.com/jetpack/androidx/releases/appcompat
+            'appCompat'            : '1.4.0-rc01',
+            // https://developer.android.com/jetpack/androidx/releases/activity
+            'activity'             : '1.4.0',
+            // https://developer.android.com/jetpack/androidx/releases/compose
+            'compose'              : '1.1.0-beta02',
+            // https://developer.android.com/jetpack/androidx/releases/compose-material3
+            'material3'            : '1.0.0-alpha01',
+            // https://developer.android.com/jetpack/androidx/releases/navigation
+            'navigation'           : '2.4.0-beta02',
+            // https://developer.android.com/jetpack/androidx/releases/room
+            'room'                 : '2.4.0-beta01',
+            // http://square.github.io/retrofit/
+            'retrofit'             : '2.9.0',
+            // https://github.com/square/okhttp/
+            'okhttp'               : '4.9.2',
+            'dagger'               : '3.1.0',
+            'junit'                : '4.13.2',
+            // https://developer.android.com/jetpack/androidx/releases/test
+            'androidxJUnit'        : '1.1.3',
+            'androidxEspresso'     : '3.4.0'
+    ]
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.0-alpha03' apply false
