--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
             'targetSdk'            : 31,
             'buildTools'           : '31.0.0',
             // https://kotlinlang.org/docs/releases.html#release-details
-            'kotlin'               : '1.5.31',
+            'kotlin'               : kotlin_version,
             'kotlinCoroutine'      : '1.5.2',
             // https://developer.android.com/jetpack/androidx/releases/appcompat
             'appCompat'            : '1.4.0-rc01',
@@ -29,11 +29,12 @@ buildscript {
             'androidxJUnit'        : '1.1.3',
             'androidxEspresso'     : '3.4.0'
     ]
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+}
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.2.0-alpha03' apply false
-    id 'com.android.library' version '7.2.0-alpha03' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
+    id 'com.android.application' version "$agp_version" apply false
+    id 'com.android.library' version "$agp_version" apply false
+    id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
 }
 
 task clean(type: Delete) {
